@@ -6,6 +6,7 @@ use crate::config::AccountSelectors;
 use serde::Deserialize;
 
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct ConfigRaw {
     pub(super) kernel: KernelRaw,
     pub(super) price: Option<PriceRaw>,
@@ -14,8 +15,8 @@ pub(super) struct ConfigRaw {
     pub(super) export: ExportRaw,
 }
 
-#[allow(dead_code)]
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct KernelRaw {
     pub(super) strict: bool,
     pub(super) timestamp: TimestampRaw,
@@ -23,28 +24,30 @@ pub(super) struct KernelRaw {
     pub(super) input: InputRaw,
 }
 
-#[allow(dead_code)]
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct TimestampRaw {
     #[serde(rename = "default-time")]
     pub(super) default_time: toml::value::Time,
     pub(super) timezone: TimezoneRaw,
 }
 
-#[allow(dead_code)]
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct TimezoneRaw {
     pub(super) name: Option<String>,
     pub(super) offset: Option<String>,
 }
 
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct AuditRaw {
     pub(super) hash: String,
     pub(super) mode: bool,
 }
 
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct InputRaw {
     pub(super) storage: String,
     pub(super) fs: Option<FsRaw>,
@@ -52,6 +55,7 @@ pub(super) struct InputRaw {
 }
 
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct FsRaw {
     // new key
     pub(super) path: Option<String>,
@@ -59,8 +63,8 @@ pub(super) struct FsRaw {
     pub(super) suffix: String,
 }
 
-#[allow(dead_code)]
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct GitRaw {
     // old key
     pub(super) repository: Option<String>,
@@ -73,6 +77,7 @@ pub(super) struct GitRaw {
 }
 
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct PriceRaw {
     #[serde(rename = "db-path")]
     pub(super) db_path: String,
@@ -81,6 +86,7 @@ pub(super) struct PriceRaw {
 }
 
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct TransactionRaw {
     pub(super) accounts: AccountsPathRaw,
     pub(super) commodities: CommoditiesPathRaw,
@@ -88,27 +94,32 @@ pub(super) struct TransactionRaw {
 }
 
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct AccountsPathRaw {
     pub(super) path: String,
 }
 
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct CommoditiesPathRaw {
     pub(super) path: String,
 }
 
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct TagsPathRaw {
     pub(super) path: String,
 }
 
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct AccountsRaw {
     #[serde(rename = "accounts")]
     pub(super) names: Vec<String>,
 }
 
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct CommoditiesRaw {
     #[serde(rename = "permit-empty-commodity")]
     pub(crate) permit_empty_commodity: Option<bool>,
@@ -118,12 +129,14 @@ pub(super) struct CommoditiesRaw {
 }
 
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct TagsRaw {
     #[serde(rename = "tags")]
     pub(crate) names: Vec<String>,
 }
 
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct ReportRaw {
     #[serde(rename = "report-timezone")]
     pub(super) report_tz: String,
@@ -138,12 +151,14 @@ pub(super) struct ReportRaw {
 }
 
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct ScaleRaw {
     pub(super) min: u32,
     pub(super) max: u32,
 }
 
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct BalanceRaw {
     pub(super) title: String,
     #[serde(rename = "type")]
@@ -153,6 +168,7 @@ pub(super) struct BalanceRaw {
 }
 
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct BalanceGroupRaw {
     pub(super) title: String,
     #[serde(rename = "type")]
@@ -164,6 +180,7 @@ pub(super) struct BalanceGroupRaw {
 }
 
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct RegisterRaw {
     pub(super) title: String,
     #[serde(rename = "timestamp-style")]
@@ -173,6 +190,7 @@ pub(super) struct RegisterRaw {
 }
 
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct ExportRaw {
     pub(super) targets: Vec<String>,
 
@@ -180,6 +198,7 @@ pub(super) struct ExportRaw {
 }
 
 #[derive(Debug, Clone, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub(super) struct EquityRaw {
     #[serde(rename = "equity-account")]
     pub(super) equity_account: String,
